--- a/achievements.html
+++ b/achievements.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
+    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure"> <!-- Add this line -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chockalingam Kumarappan - Achievements</title>
