--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main>
         <div class="homepage-banner">
-            <img src="C:\Users\linga\upgraded web\banner.png" alt="Description of the image">
+            <img src="banner.png" alt="Description of the image">
             <h2>Welcome to My Portfolio</h2>
             <p>Explore my experiences, achievements, projects, and more.</p>
         </div>
