--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
-    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure"> <!-- Add this line -->
+    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chockalingam Kumarappan - Portfolio</title>
