--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
+
+    <!-- Add the following line -->
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
+
     <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
