--- a/achievements.html
+++ b/achievements.html
@@ -9,26 +9,8 @@
     <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chockalingam Kumarappan - Portfolio</title>
+    <title>Chockalingam Kumarappan - Achievements</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Your existing styles here */
-
-        .homepage-banner img {
-            width: 100%;
-            height: auto;
-            max-width: 100%;
-            object-fit: cover; /* or object-fit: contain; */
-            /* Add other styles as needed */
-        }
-
-        .homepage-banner {
-            /* Add styles for the banner container */
-            /* For example, you can set a maximum width */
-            max-width: 800px;
-            margin: 0 auto; /* Center the banner */
-        }
-    </style>
 </head>
 <body>
     
@@ -45,12 +27,16 @@
     </nav>
 
     <main>
-        <div class="homepage-banner">
-            <img src="banner.png" alt="Description of the image">
-            <h2>Welcome to My Portfolio</h2>
-            <p>Explore my experiences, achievements, projects, and more.</p>
-        </div>
+        <h2>Achievements</h2>
+
+        <ul>
+            <!-- Your achievement list here -->
+        </ul>
     </main>
-    
+
+    <footer>
+        <a href="index.html">Return to Homepage</a>
+    </footer>
+
 </body>
 </html>
