--- a/experiences.html
+++ b/experiences.html
@@ -25,42 +25,40 @@
     <main>
         <h2>Experience</h2>
 
-        <ul>
-            <li>
-                <h3>Retail Assistant at NTUC FairPrice</h3>
-                <p>
-                    From October 2018 - January 2019 and from November 2019 - February 2020, I worked part-time as a retail assistant at FairPrice.
-                    As a retail assistant, I helped stock shelves with new products, arranged the new batch in the storeroom, decorated the store during holiday seasons,
-                    and assisted customers in finding products and explaining how they work.
-                </p>
-            </li>
+        <section>
+            <h3>Retail Assistant at NTUC FairPrice</h3>
+            <p>
+                From October 2018 - January 2019 and from November 2019 - February 2020, I worked part-time as a retail assistant at FairPrice.
+                As a retail assistant, I helped stock shelves with new products, arranged the new batch in the storeroom, decorated the store during holiday seasons,
+                and assisted customers in finding products and explaining how they work.
+            </p>
+        </section>
 
-            <li>
-                <h3>Tutor</h3>
-                <p>
-                    After completing my Secondary school education, I worked as a tutor, providing exam tips and tricks, summarizing contents, and assisting with assignments.
-                    I reached out to students via social media platforms such as Telegram and Reddit, offering help for free. Currently, I am volunteering as a tutor at Epsworth Learning Center.
-                </p>
-            </li>
+        <section>
+            <h3>Tutor</h3>
+            <p>
+                After completing my Secondary school education, I worked as a tutor, providing exam tips and tricks, summarizing contents, and assisting with assignments.
+                I reached out to students via social media platforms such as Telegram and Reddit, offering help for free. Currently, I am volunteering as a tutor at Epsworth Learning Center.
+            </p>
+        </section>
 
-            <li>
-                <h3>Staff Assistant at Woodlands Division, Singapore Police Force</h3>
-                <p>
-                    During my National Service, I was given the role of Staff Assistant to Head Service Quality at Woodlands Service Quality Branch for Woodlands Police Division.
-                    As part of my job, I took note of feedback, stored them in a database, used spreadsheets to design charts and presented them in PowerPoint.
-                    I was deployed for the 2023 presidential election and 2023 F1 Grand Prix to conduct Unit Morale Sensing, assessing the morale level of officers deployed on the grounds,
-                    and suggesting improvements to their welfare and well-being.
-                </p>
-                <p>
-                    As part of my responsibilities, I observed the professionalism of SPF officers and responded to the needs of the members of the public.
-                    I collaborated with other agencies such as the Ministry of Home Affairs, Ministry of Education, Town Council, and Members of Parliament to resolve community problems and promote a harmonious society.
-                    I was also in charge of three understudies, leading them through good and professional work examples and taking care of their well-being as a leader.
-                </p>
-                <p>
-                    During the basic officer course, I achieved the highest score in police law studies.
-                </p>
-            </li>
-        </ul>
+        <section>
+            <h3>Staff Assistant at Woodlands Division, Singapore Police Force</h3>
+            <p>
+                During my National Service, I was given the role of Staff Assistant to Head Service Quality at Woodlands Service Quality Branch for Woodlands Police Division.
+                As part of my job, I took note of feedback, stored them in a database, used spreadsheets to design charts and presented them in PowerPoint.
+                I was deployed for the 2023 presidential election and 2023 F1 Grand Prix to conduct Unit Morale Sensing, assessing the morale level of officers deployed on the grounds,
+                and suggesting improvements to their welfare and well-being.
+            </p>
+            <p>
+                As part of my responsibilities, I observed the professionalism of SPF officers and responded to the needs of the members of the public.
+                I collaborated with other agencies such as the Ministry of Home Affairs, Ministry of Education, Town Council, and Members of Parliament to resolve community problems and promote a harmonious society.
+                I was also in charge of three understudies, leading them through good and professional work examples and taking care of their well-being as a leader.
+            </p>
+            <p>
+                During the basic officer course, I achieved the highest score in police law studies.
+            </p>
+        </section>
     </main>
 
     <footer>
