--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
-    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure"> <!-- Add this line -->
+    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chockalingam Kumarappan - Links</title>
@@ -25,57 +25,37 @@
     <main>
         <h2>Links</h2>
 
-        <ul>
-            <li>
-                <h3>Email</h3>
-                <p>
-                    Contact me via email.
-                </p>
-                <p>
-                    Email: <a href="mailto:lingamchocka4@gmail.com">lingamchocka4@gmail.com</a>
-                </p>
-            </li>
+        <section>
+            <h3>Email</h3>
+            <p>Contact me via email.</p>
+            <p>Email: <a href="mailto:lingamchocka4@gmail.com">lingamchocka4@gmail.com</a></p>
+        </section>
 
-            <li>
-                <h3>LinkedIn</h3>
-                <p>
-                    Connect with me on LinkedIn.
-                </p>
-                <p>
-                    <a href="https://www.linkedin.com/in/chockalingam-kumarappan?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B8645E2MeRDSMwsO7A6UkUw%3D%3D" target="_blank">LinkedIn Profile</a>
-                </p>
-            </li>
+        <section>
+            <h3>LinkedIn</h3>
+            <p>Connect with me on LinkedIn.</p>
+            <p><a href="https://www.linkedin.com/in/chockalingam-kumarappan?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B8645E2MeRDSMwsO7A6UkUw%3D%3D" target="_blank">LinkedIn Profile</a></p>
+        </section>
 
-            <li>
-                <h3>Academia.edu</h3>
-                <p>
-                    View my research papers on Academia.edu.
-                </p>
-                <p>
-                    <a href="https://chockalingamkumarappan.academia.edu/" target="_blank">Academia.edu Profile</a>
-                </p>
-            </li>
+        <section>
+            <h3>Academia.edu</h3>
+            <p>View my research papers on Academia.edu.</p>
+            <p><a href="https://chockalingamkumarappan.academia.edu/" target="_blank">Academia.edu Profile</a></p>
+        </section>
 
-            <li>
-                <h3>Github</h3>
-                <p>
-                    Explore my projects on Github.
-                </p>
-                <p>
-                    <a href="https://github.com/RedBOyC" target="_blank">Github Profile</a>
-                </p>
-            </li>
+        <section>
+            <h3>Github</h3>
+            <p>Explore my projects on Github.</p>
+            <p><a href="https://github.com/RedBOyC" target="_blank">Github Profile</a></p>
+        </section>
 
-            <!-- Add more links as needed -->
+        <!-- Add more links as needed -->
 
-        </ul>
     </main>
-</ul>
-</main>
 
-<footer>
-    <a href="index.html">Return to Homepage</a>
-</footer>
+    <footer>
+        <a href="index.html">Return to Homepage</a>
+    </footer>
 
 </body>
 </html>
