--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
-    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure"> <!-- Add this line -->
+    <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chockalingam Kumarappan - Projects</title>
@@ -115,12 +115,10 @@
             }
         }
     </script>
-</ul>
-</main>
 
-<footer>
-    <a href="index.html">Return to Homepage</a>
-</footer>
+    <footer>
+        <a href="index.html">Return to Homepage</a>
+    </footer>
 
 </body>
 </html>
