--- a/achievements.html
+++ b/achievements.html
@@ -26,11 +26,136 @@
         <!-- No need to manually include navigation items here -->
     </nav>
 
-    <main>
+<main>
         <h2>Achievements</h2>
 
         <ul>
-            <!-- Your achievement list here -->
+            <li>
+                <h3>Primary 2 - 2nd in Cohort</h3>
+                <p>
+                    Came in 2nd place in the cohort in P2.
+                </p>
+            </li>
+
+            <li>
+                <h3>Primary 4 - 5th Place in Creative Writing Competition</h3>
+                <p>
+                    Attained 5th place in the P4 Creative Writing Competition out of roughly 30 participants.
+                    The competition involved writing a story based on 6 images, linking them together in any order, and using original ideas under 1.5 hours.
+                </p>
+            </li>
+
+            <li>
+                <h3>Primary 4 - Participation in Primary School All Arts Competition</h3>
+                <p>
+                    Received Certificate of Participation in Primary School All Arts Competition held at Raffles Institution.
+                </p>
+            </li>
+
+            <li>
+                <h3>Primary 5 - Second in Cohort</h3>
+                <p>
+                    Came in 2nd place in cohort in P5.
+                </p>
+            </li>
+
+            <li>
+                <h3>Primary 6 - 3rd Place in Poetry Writing Competition</h3>
+                <p>
+                    Attained 3rd place in the P6 Poetry Writing Competition out of roughly 30 participants.
+                    The competition involved writing a short poem based on a given theme and presenting it in front of a large audience.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 1 - Australian Mathematics Competition</h3>
+                <p>
+                    Received Certificate of participation for Australian Mathematics Competition held by Australian Maths Trust.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 1 - Big Science Competition Pen&Paper</h3>
+                <p>
+                    Received Certificate of participation for Big Science Competition Pen&Paper held by Australian Science Innovation.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 2 - Academic Excellence Award</h3>
+                <p>
+                    Best in Tamil language, 2nd in Geography, and 3rd in Mathematics.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 3 - Academic Excellence Award</h3>
+                <p>
+                    Best in Science (physics, chemistry), Best in elective geography, 2nd in humanities (geography, social studies).
+                    2nd in Mathematics and Additional Mathematics. 2nd in cohort for the year. 6 distinctions.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 3 - Online Mathematics Competition</h3>
+                <p>
+                    Achieved Champion Certificate for Secondary 3 Online Mathematics Competition.
+                    Answered 3 advanced geometry questions and attained a perfect score.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 4 - Academic Excellence Award</h3>
+                <p>
+                    Best in Science (physics, chemistry), Best in humanities, 2nd in Mathematics and Additional Mathematics.
+                    2nd in cohort for prelims, with 6 distinctions.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 4 - Top O level scorer (Academic Merit Award)</h3>
+                <p>
+                    Attained 4 distinctions at GCE O-Levels in 2019.
+                </p>
+            </li>
+
+            <li>
+                <h3>Interact Leadership Training Camp 2020</h3>
+                <p>
+                    Participated in the leadership training camp for Junior College Co-Curricular Activity.
+                </p>
+            </li>
+
+            <li>
+                <h3>Interact Club's Champion Certificate</h3>
+                <p>
+                    Character award.
+                </p>
+            </li>
+
+            <li>
+                <h3>JC2 - Good A-level results</h3>
+                <p>
+                    Attained 3 distinctions in GCE A-levels in 2021, and merit in H3 mathematics.
+                </p>
+            </li>
+
+            <li>
+                <h3>NS - SPF Best in Professional Law Studies</h3>
+                <p>
+                    Attained the highest score during my training in Training Command School.
+                </p>
+            </li>
+
+            <li>
+                <h3>NS - Commander/Head Service Quality Pen</h3>
+                <p>
+                    Awarded for excellent and professional work ethics.
+                </p>
+            </li>
+
+            <!-- Add more achievements as needed -->
+
         </ul>
     </main>
 
