--- a/achievements.html
+++ b/achievements.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
-
-    <!-- Add the following line -->
+    <meta http-equiv="Content-Security-Policy" content="interest-cohort=();">
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
-
     <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +23,7 @@
         <!-- No need to manually include navigation items here -->
     </nav>
 
-<main>
+    <main>
         <h2>Achievements</h2>
 
         <ul>
