--- a/achievements.html
+++ b/achievements.html
@@ -131,6 +131,13 @@
             </li>
 
             <li>
+                <h3>JC - Top in H2 Mathematics in Class/Cohort</h3>
+                <p>
+                    Attained top scores in H2 Mathematics in class in JC, and attained top score in cohort in 2021 Mid-year examination.
+                </p>
+            </li>
+
+            <li>
                 <h3>JC2 - Good A-level results</h3>
                 <p>
                     Attained 3 distinctions in GCE A-levels in 2021, and merit in H3 mathematics.
