--- a/experiences.html
+++ b/experiences.html
@@ -59,6 +59,17 @@
                 During the basic officer course, I achieved the highest score in police law studies.
             </p>
         </section>
+
+        <section>
+            <h3>Temporary Event Assistant at Pictureworks Pte Ltd, Gardens By the Bay</h3>
+            <p>
+                My role as the Temporary Event Assistant was to aid in the photography of tourists inside the dome at Gardens By the Bay, and help push for sales of these photographs.
+            </p>
+            <p>
+                Apart from just encouraging customers to purchase the photographs taken by us, I also engaged in conversations with them and tell them more about Singapore, and other sites that they could visit during 
+                their stay in Singapore.
+            </p>
+        </section>
     </main>
 
     <footer>
