--- a/achievements.html
+++ b/achievements.html
@@ -67,7 +67,7 @@
             <li>
                 <h3>Secondary 1 - Australian Mathematics Competition</h3>
                 <p>
-                    Received Certificate of participation for Australian Mathematics Competition held by Australian Maths Trust.
+                    Received Certificate of achievement for attaining High Distinction in Australian Mathematics Competition held by Australian Maths Trust.
                 </p>
             </li>
 
