--- a/experiences.html
+++ b/experiences.html
@@ -70,6 +70,18 @@
                 their stay in Singapore.
             </p>
         </section>
+
+        <section>
+            <h3>Administrative Assistant at AsiaPac Pte Ltd (From M1)</h3>
+            <p>
+                From March 2024 to April 2024, I interned at AsiaPac (From M1) as an administrative assistant to expand on my knowledge in data management and analysis.
+            </p>
+            <p>
+                During my internship at AsiaPac, I played a key role in managing sales order processes for laptop roadshows at educational institutions in Singapore. This involved extracting sales data from Excel workbooks 
+                to a master file and SQL database, generating sale order numbers for tracking, and communicating payment and delivery details to customers. I also coordinated packing, deployment, billing, and invoicing activities, 
+                and generated sales and deployment reports using Excel and SQL databases. This experience enhanced my skills in data management, customer service, and logistical coordination.
+            </p>
+        </section>
     </main>
 
     <footer>
