--- a/achievements.html
+++ b/achievements.html
@@ -65,16 +65,16 @@
             </li>
 
             <li>
-                <h3>Secondary 1 - Australian Mathematics Competition</h3>
+                <h3>Secondary 1 - Big Science Competition Pen&Paper</h3>
                 <p>
-                    Received Certificate of achievement for attaining High Distinction in Australian Mathematics Competition held by Australian Maths Trust.
+                    Received Certificate of participation for Big Science Competition Pen&Paper held by Australian Science Innovation.
                 </p>
             </li>
 
             <li>
-                <h3>Secondary 1 - Big Science Competition Pen&Paper</h3>
+                <h3>Secondary 2 - Australian Mathematics Competition</h3>
                 <p>
-                    Received Certificate of participation for Big Science Competition Pen&Paper held by Australian Science Innovation.
+                    Received Certificate of achievement for attaining Distinction in Australian Mathematics Competition held by Australian Maths Trust.
                 </p>
             </li>
 
@@ -102,6 +102,13 @@
             </li>
 
             <li>
+                <h3>Secondary 3 - Australian Mathematics Competition</h3>
+                <p>
+                    Received Certificate of achievement for attaining Distinction in Australian Mathematics Competition held by Australian Maths Trust.
+                </p>
+            </li>
+
+            <li>
                 <h3>Secondary 4 - Academic Excellence Award</h3>
                 <p>
                     Best in Science (physics, chemistry), Best in humanities, 2nd in Mathematics and Additional Mathematics.
@@ -120,13 +127,6 @@
                 <h3>Interact Leadership Training Camp 2020</h3>
                 <p>
                     Participated in the leadership training camp for Junior College Co-Curricular Activity.
-                </p>
-            </li>
-
-            <li>
-                <h3>Interact Club's Champion Certificate</h3>
-                <p>
-                    Character award.
                 </p>
             </li>
 
