--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Security-Policy" content="interest-cohort=()">
-
-    <!-- Add the following line -->
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
-
     <meta http-equiv="Content-Security-Policy" content="SameSite=None; Secure">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,6 +25,12 @@
             max-width: 800px;
             margin: 0 auto; /* Center the banner */
         }
+
+        /* Additional styles for the bio */
+        .bio {
+            text-align: center; /* Center the text */
+            margin-top: 20px; /* Adjust the margin as needed */
+        }
     </style>
 </head>
 <body>
@@ -49,6 +52,17 @@
             <img src="banner.png" alt="Description of the image">
             <h2>Welcome to My Portfolio</h2>
             <p>Explore my experiences, achievements, projects, and more.</p>
+            
+            <!-- Add your short write-up here -->
+            <div class="bio">
+                <h3>About Me</h3>
+                <p>Mathematics is like a thrilling adventure for me, especially when I explore topics like numbers, secret codes, and how math connects to computers and the universe.</p>
+                <p>I love solving puzzles and asking questions that make people think differently.</p>
+                <p>Right now, I'm studying Math at the National University of Singapore (NUS). But before that, I've done all sorts of jobs like working in a store and helping with office stuff.</p>
+                <p>Outside of school and work, I enjoy helping out in my community. I started volunteering in school, and now I still do it in my free time.</p>
+                <p>When I'm not busy with all that, I like to tackle tough math problems and take part in competitions.</p>
+                <p>Overall, I'm just a curious person who loves learning and helping out where I can.</p>
+            </div>
         </div>
     </main>
     
