--- a/achievements.html
+++ b/achievements.html
@@ -152,6 +152,13 @@
             </li>
 
             <li>
+                <h3>NS - Best Land Division for Service Quality for FY 22/23</h3>
+                <p>
+                    Attained 100% satisfaction in interim and final reply sent to customers, and for best morale among officers in division.
+                </p>
+            </li>
+
+            <li>
                 <h3>NS - Commander/Head Service Quality Pen</h3>
                 <p>
                     Awarded for excellent and professional work ethics.
