--- a/achievements.html
+++ b/achievements.html
@@ -72,6 +72,13 @@
             </li>
 
             <li>
+                <h3>Secondary 1 - NPCC Best Unit Competition-Gold</h3>
+                <p>
+                    Represented School and obtained gold award.
+                </p>
+            </li>
+
+            <li>
                 <h3>Secondary 2 - Australian Mathematics Competition</h3>
                 <p>
                     Received Certificate of achievement for attaining Distinction in Australian Mathematics Competition held by Australian Maths Trust.
@@ -79,9 +86,30 @@
             </li>
 
             <li>
+                <h3>Secondary 2 - NPCC Best Unit Competition-Silver</h3>
+                <p>
+                    Represented School and obtained silver award.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 2 - NPCC Unit Overall Proficiency Award-Gold</h3>
+                <p>
+                    Represented School and obtained gold award.
+                </p>
+            </li>
+
+            <li>
                 <h3>Secondary 2 - Academic Excellence Award</h3>
                 <p>
                     Best in Tamil language, 2nd in Geography, and 3rd in Mathematics.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 3 - NPCC Best Unit Competition-Gold</h3>
+                <p>
+                    Represented School and obtained gold award.
                 </p>
             </li>
 
@@ -105,6 +133,13 @@
                 <h3>Secondary 3 - Australian Mathematics Competition</h3>
                 <p>
                     Received Certificate of achievement for attaining Distinction in Australian Mathematics Competition held by Australian Maths Trust.
+                </p>
+            </li>
+
+            <li>
+                <h3>Secondary 4 - NPCC Best Unit Competition-Gold</h3>
+                <p>
+                    Represented School and obtained gold award.
                 </p>
             </li>
 
