--- a/achievements.html
+++ b/achievements.html
@@ -159,17 +159,16 @@
             </li>
 
             <li>
-                <h3>Interact Leadership Training Camp 2020</h3>
+                <h3>JC - Top in H2 Mathematics in Cohort 2021</h3>
                 <p>
-                    Participated in the leadership training camp for Junior College Co-Curricular Activity.
+                    Attained the top score for H2 Mathematics in JC2 Mid-Year Examination.
                 </p>
             </li>
 
             <li>
                 <h3>JC - Top in H2 Mathematics in Class/Cohort</h3>
                 <p>
-                    Attained top scores in H2 Mathematics in class in JC, and attained top score in cohort in 2021 Mid-year examination.
-                </p>
+                    Attained top scores in H2 Mathematics in class in JC2 for Block Test, Mid-Year Examination and Preliminary Examination.
             </li>
 
             <li>
@@ -189,14 +188,14 @@
             <li>
                 <h3>NS - Best Land Division for Service Quality for FY 22/23</h3>
                 <p>
-                    Attained 100% satisfaction in interim and final reply sent to customers, and for best morale among officers in division.
+                    -
                 </p>
             </li>
 
             <li>
                 <h3>NS - Commander/Head Service Quality Pen</h3>
                 <p>
-                    Awarded for excellent and professional work ethics.
+                    Awarded for excellent and professional work ethics, and attaining best land division for service quality.
                 </p>
             </li>
 
