--- a/achievements.html
+++ b/achievements.html
@@ -166,7 +166,7 @@
             </li>
 
             <li>
-                <h3>JC - Top in H2 Mathematics in Class/Cohort</h3>
+                <h3>JC - Top in H2 Mathematics in Class for Year 2</h3>
                 <p>
                     Attained top scores in H2 Mathematics in class in JC2 for Block Test, Mid-Year Examination and Preliminary Examination.
             </li>
