--- a/achievements.html
+++ b/achievements.html
@@ -199,6 +199,14 @@
                 </p>
             </li>
 
+            <li>
+                <h3>Advanced Regression Technique-House Price Prediction model competition</h3>
+                <p>
+                    Participated in Advanced Regression Technique-Price Prediction model competition on October 2024, and ranked
+                    within the top 25% at the time of submission.
+                </p>
+            </li>
+
             <!-- Add more achievements as needed -->
 
         </ul>
