--- a/achievements.html
+++ b/achievements.html
@@ -207,6 +207,13 @@
                 </p>
             </li>
 
+            <li>
+                <h3>Eedie Mining Misconceptions in Mathematics Competition</h3>
+                <p>
+                    Partipated in Eedie Mining Misconceptions in Mathematics competion on November 2024. Waiting for results.
+                </p>
+            </li>
+
             <!-- Add more achievements as needed -->
 
         </ul>
